--- a/files/css/extracss.css
+++ b/files/css/extracss.css
@@ -1,5 +1,10 @@
 body {
-background: linear-gradient(90deg, hsla(205, 46%, 10%, 1) 0%, hsla(191, 28%, 23%, 1) 50%, hsla(207, 41%, 27%, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    hsla(205, 46%, 10%, 1) 0%,
+    hsla(191, 28%, 23%, 1) 50%,
+    hsla(207, 41%, 27%, 1) 100%
+  );
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -24,8 +29,7 @@ background: linear-gradient(90deg, hsla(205, 46%, 10%, 1) 0%, hsla(191, 28%, 23%
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-
-h1{
+h1 {
   color: rgb(255, 255, 255);
 }
 .input-group {
@@ -56,12 +60,11 @@ h1{
   transition: 0.2s ease;
 }
 
-
 .input-group input:focus + label,
 .input-group input:valid + label {
   top: -0.5rem;
   left: 0.4rem;
-  background:transparent;
+  background: transparent;
   font-size: 1rem;
   color: #adaaaa;
 }
@@ -80,6 +83,6 @@ h1{
 .lsbutton:hover {
   background: #0056b3;
 }
-a{
+a {
   font-size: 20px;
 }
